# zzzXBDJBansBackend

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20260125000000_init.sql  20260125020000_add_expires_at.sql  20260125040000_add_servers.sql  20260130000000_add_ban_source.sql  20260131000000_add_whitelist.sql  20260131120000_add_verification.sql  20260201131000_add_server_verification_toggle.sql  20260202000000_add_player_cache.sql  20260205000000_enhance_player_cache.sql  20260205100000_add_verified_status.sql  20260206000000_add_steamid64_fields.sql  20260207000000_remove_denied_status.sql  20260211000000_add_remark_to_admins.sql  20260212131500_add_reject_reason.sql  20260212134500_add_admin_name_to_whitelist.sql  20260216190000_missing_migration.sql  20260217130000_fix_admin_steamids.sql
src/: bg_task.rs  db.rs  main.rs
src/handlers/: admin.rs  auth.rs  ban.rs  log.rs  mod.rs  record.rs  server.rs  verification.rs  whitelist.rs
src/middleware/: mod.rs
src/models/: ban.rs  log.rs  mod.rs  record.rs  server.rs  user.rs  whitelist.rs
src/services/: mod.rs  steam_api.rs  verification_worker.rs
src/utils/: mod.rs  rcon.rs
